Fix horizontal scroll because of .bg1 image

--- a/src/less/adaptive.less
+++ b/src/less/adaptive.less
@@ -94,26 +94,6 @@ body {
         }
       }
     }
-    .start {
-      .text {
-        text-align: center;
-        padding-bottom: 40px;
-      }
-      .counter, .notebook {
-        position: relative;
-        left: inherit;
-        top: inherit;
-        margin: 0 auto;
-        margin-bottom: 160px;
-      }
-      .notebook {
-        background-image: url("../img/tablet@2x.png");
-        width: 600px;
-        height: 258px;
-        background-size: 600px 258px;
-        margin-top: 60px;
-      }
-    }
   }
 
   @media only screen and (max-width: 768px) {
@@ -181,27 +161,6 @@ body {
     .header {
       padding-top: 0;
       padding-bottom: 0;
-    }
-    .start {
-      padding-top: 120px;
-      padding-bottom: 0;
-      .iphone, .card {
-        display: none;
-      }
-      .text {
-        padding: 60px 0 20px;
-        text-align: center;
-      }
-      .bg1, .bg2 {
-        display: none;
-      }
-      .notebook {
-        background-image: url("../img/phone.png");
-        width: 320px;
-        height: 208px;
-        background-size: 320px 208px;
-        margin-top: 60px;
-      }
     }
     .features {
       padding-bottom: 20px;
@@ -340,33 +299,6 @@ body {
       padding-top: 0;
       padding-bottom: 0;
     }
-    .start {
-      padding: 120px 0 0 0;
-      .text {
-        padding-left: 30px;
-        padding-right: 30px;
-        p {
-          font-size: 16px;
-          font-weight: 400;
-          line-height: 26px;
-          br {
-            display: none;
-          }
-        }
-        h1 {
-          font-weight: 400;
-          font-size: 24px;
-        }
-      }
-      .progress-wrap {
-        padding: 0 30px;
-      }
-      .counter {
-        .row {
-          padding: 0 30px;
-        }
-      }
-    }
     .features {
       padding-bottom: 10px;
     }
@@ -487,31 +419,6 @@ body {
         }
       }
     }
-    .start {
-      .text {
-        padding-bottom: 0;
-        h1 {
-          font-weight: normal;
-          font-size: 24px;
-        }
-        p {
-          font-size: 16px;
-          font-weight: normal;
-          line-height: 26px;
-          br {
-            display: none;
-          }
-        }
-      }
-      .counter {
-        .value {
-          font-size: 20px;
-        }
-        .row {
-          margin: 0;
-        }
-      }
-    }
     .about {
       h3,
       p {
@@ -629,14 +536,6 @@ body {
   }
 
   @media only screen and (max-width: 414px) {
-    .start {
-      .counter, .notebook {
-        display: none;
-      }
-      .text {
-        padding-bottom: 180px;
-      }
-    }
     .features {
       .col-3 {
         width: auto;
